<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fleet Manager</string>
    <string name="action_settings">SETTINGS</string>
    <string name="hello_world">HELLO WORLD!</string>
    <string name="edit_reminder_title">TASK REMINDER - EDIT</string>
    <string name="no_reminders">NO REMINDERS YET</string>
    <string name="menu_insert">ADD REMINDER</string>
    <string name="menu_delete">DELETE REMINDER</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">SAVE</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>
    <string name="action_help">HELP</string>
    <string name="action_about">ABOUT</string>
    <string name="action_editprofile">PROFILE</string>
    <string name="action_inbox">INBOX</string>
    <string name="action_exit">EXIT</string>

    <!-- Toasts -->
    <string name="task_saved_message">TASK HAS BEEN SAVED</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>
    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>
    <string name="current_trip">CURRENT TRIP</string>
    <string name="add_vehicle_user">ADD_VEHICLE_USER</string>
    <string name="fuel">FUEL</string>
    <string name="payment">PAYMENT</string>
    <string name="advance">ADVANCE</string>
    <string name="CurrentTrips">TRIPS</string>
    <string name="location">LOCATION</string>
    <string name="Tracking">TRACKING</string>
    <string name="chart_pie">CHART</string>
    <string name="driver">Driver</string>
    <string name="vehicle">Vehicle</string>
    <string name="distance">Distance</string>
    <string name="mileage">Mileage</string>
    <string name="New_Text">NEW TEXT</string>
    <string name="from_date">FROM DATE</string>
    <string name="to_date">TO DATE</string>
    <string name="close">CLOSE</string>
    <string name="total_distance">TOTAL DISTANCE</string>
    <string name="pin">ENTER YOUR PIN</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PIN?</string>
    <string name="registration">REGISTRATION</string>
    <string name="profile">PROFILE</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="version">Version:</string>
    <string name="manager">Manager</string>
    <string name="demo">DEMO</string>
    <string name="email">Email</string>
    <string name="usertype">User Type</string>
    <string name="clientname">Client Name</string>
    <string name="pinn">Enter 4 digit pin</string>
    <string name="pinnn">Pin</string>
    <string name="confirm_pin">CONFIRM PIN</string>
    <string name="productkey">Product Key</string>
    <string name="register">REGISTER</string>
    <string name="update">UPDATE</string>
    <string name="slno">SLNO</string>
    <string name="date1">Date</string>
    <string name="source">SOURCE</string>
    <string name="destination">DESTINATION</string>
    <string name="located">LOCATED</string>
    <string name="kms">KMS</string>
    <string name="pay">PAY</string>
    <string name="cleaner">CLEANER</string>
    <string name="enter_the_registered_phone_number">ENTER THE REGISTERED PHONE NUMBER</string>
    <string name="enter_your_phone_number">ENTER YOUR PHONE NO</string>
    <string name="retrieve_pin">RETRIEVE PIN</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_name">Location Name</string>
    <string name="amount">Amount</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="allowpayment">Allow Payment</string>
    <string name="denypayment">Deny Payment</string>
    <string name="voucherno">Voucher No</string>
    <string name="vouchern">VOUCHER</string>
    <string name="bata">Bata</string>
    <string name="salary">Salary</string>
    <string name="cleaner_advance">Cleaner Advance</string>
    <string name="driver_advance">Driver Advance</string>
    <string name="vehicle_advance">Vehicle Advance</string>
    <string name="total_amount">Total Amount</string>
    <string name="total">Total</string>
    <string name="click_here">CLICK HERE</string>
    <string name="ok">PAY</string>
    <string name="mileage_deduction">Mileage Deduction</string>
    <string name="ltr">Ltr</string>
    <string name="rs">Rs</string>
    <string name="expense">Expense</string>
    <string name="send">SEND</string>
    <string name="speedometer">Speedo Meter</string>
    <string name="speedometer_value">Speedometer Value</string>
    <string name="fuel_volume">Fuel Volume</string>
    <string name="type">TYPE</string>
    <string name="employee">EMPLOYEE</string>
    <string name="receipt">RECEIPT</string>
    <string name="commission">Commission</string>
    <string name="address">Address</string>
    <string name="particular">Particular</string>
    <string name="license">License Number</string>
    <string name="new_entries">NEW ENTRIES</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="reminder">REMINDER</string>
    <string name="leave">LEAVE</string>
    <string name="vehicledetails">VEHICLE DETAILS</string>
    <string name="vehicle_number">VEHICLE NUMBER:</string>
    <string name="vehicle_no">VEHICLE NO :</string>
    <string name="status">STATUS :</string>
    <string name="vehiclespeed">SPEED :</string>
    <string name="fuel1">FUEL :</string>
    <string name="addfuel">ADD FUEL</string>
    <string name="tripdetails">TRIP DETAILS</string>
    <string name="source1">SOURCE:</string>
    <string name="destination1">DESTINATION:</string>
    <string name="view_on_map">VIEW ON MAP</string>
    <string name="select_vehicle_first"> SELECT VEHICLE FIRST !</string>
    <string name="current">CURRENT</string>
    <string name="path">PATH</string>
    <string name="source2">SOURCE</string>
    <string name="destination2">DESTINATION</string>
    <string name="textview">TEXTVIEW</string>
    <string name="add_reminder">ADD REMINDER</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="select_driver">Select Driver</string>
    <string name="select_source">Select Source</string>
    <string name="add_source">ADD SOURCE</string>
    <string name="select_destination">Select Destination</string>
    <string name="select_date">SELECT DATE</string>
    <string name="add_destination">ADD DESTINATION</string>
    <string name="select_cleaner">Select Cleaner</string>
    <string name="new_vehicle">NEW VEHICLE</string>
    <string name="imei_number">IMEI Number</string>
    <string name="re_enter_imei_number">Confirm IMEI Number

    </string>
    <string name="content">CONTENT</string>
    <string name="zero">0</string>
    <string name="zeroo">0.0</string>
    <string name="vehlist"><u>VEHICLE LIST</u></string>
    <string name="addveh"><u>ADD/UPDATE VEHICLE</u></string>
    <string name="title_activity_inbox_list">InboxList</string>
    <string name="title_activity_inbox_details">InboxDetails</string>
    <string name="title_activity_inbox_common_details">InboxCommonDetails</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="title_activity_expense_list">ExpenseList</string>
    <string name="title_activity_payment_review">PaymentReview</string>
    <string name="title_activity_repair_app">RepairApp</string>
    <string name="title_activity_app_update_check">AppUpdateCheck</string>
    <string name="title_activity_track_report">TrackReportActivity</string>
    <string name="title_activity_fuel_report">FuelReportActivity</string>
    <string name="action_about_us">ABOUT US</string>
    <string name="title_activity_about_us_content">"                " M &amp; K software Services team consists of several business leaders,  technology evangelists, tech gurus and industry certified professionals who are highly passionate about what they do. Our expert team has extensive industry and in-depth local market knowledge. We offer web, mobile and other IT strategies, as well as development services. </string>
    <string name="paid_list_driver">Driver PaidList</string>
    <string name="paid_list_cleaner">Cleaner PaidList</string>
    <string name="title_activity_multidestactivity">multidestactivity</string>
</resources>
