<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        android:showAsAction="never"
        android:title="@string/action_editprofile" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="never"
        android:title="@string/action_help" />

    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />


    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/profile"
        android:showAsAction="never"
        android:title="@string/action_exit" />
</menu>
