<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bata"
                   style="@style/customTextView" />

                <EditText
                    android:id="@+id/fragmentCleanerPaymentETCommisionPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    style="@style/customEditText" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/salary"
                    style="@style/customTextView"
                     />

                <EditText
                    android:id="@+id/fragmentCleanerPaymentETConstSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    style="@style/customEditText" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cleaner_advance"
                    style="@style/customTextView"
                     />

                <EditText
                    android:id="@+id/fragmentCleanerPaymentETCleanerAdvance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    style="@style/customEditText" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/total_amount"
                    style="@style/customTextView"
                    />

                <TextView
                    android:id="@+id/fragmentCleanerPaymentETSlidingTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    style="@style/customEditText" />

                <Button
                    android:id="@+id/fragmentCleanerPaymentETbtnCloseSlider"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7sp"
                    android:text="@string/ok"
                    style="@style/customButtonStyle"
                 />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>