<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/gradientbackground"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".PasswordRetrieval">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/enter_the_registered_phone_number"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/retrievePinEtPhone"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="35sp"
        android:layout_marginRight="35sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttonstyle"
        android:drawableLeft="@drawable/phone"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_phone_number"
        android:drawablePadding="25sp"
        android:paddingBottom="8sp"
        android:paddingLeft="12sp"
        android:paddingTop="8sp"
        android:textSize="12sp"
        android:textColor="#262522"
        android:textColorHint="@color/silver" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="35sp"
        android:layout_marginRight="35sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/buttonflat"
        android:gravity="center"
        android:text="@string/retrieve_pin"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>